# PIM-graphs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configs/: ddr4_smoke.yaml  hbm_pnm.yaml
docs/: HBM_SPEC.md
python/: pim_bindings.cpp
src/: array_feeder.hpp  bandwidth_oracle.hpp  hierarchal_router.hpp  memory_request.hpp  piccolo_controller.hpp  pseudo_channel.hpp  ramulator_hbm.cpp  ramulator_hbm.hpp  simd_core.hpp  systolic_array.hpp
tests/: test_pseudo_channels.cpp
